# diff-eq

./: .gitignore  README.md  first.py  pyproject.toml  second.py  third.py
src/: first.py  second.py
